--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -99,21 +99,68 @@ body {
 }
 
 
-.app_form  input[type="textfield"] {
+.app_form  input[type="text"] {
 	height: 22px;
-	width: 20%;
-	font-weight: bold;
-	font-size: 16px;
-	border-radius: 4px 4px 4px 4px;
+	width: 200px;
+	font-size: 14px;
+	border-radius: 3px 3px 3px 3px;
 }
 
-.app_form  input[type="textfield"]:focus {
+.app_form  input[type="text"]:focus {
+	background-color: #FFFF7D;
+}
+
+
+.app_form  input[type="password"] {
+	height: 22px;
+	width: 200px;
+	font-size: 14px;
+	border-radius: 3px 3px 3px 3px;
+}
+
+.app_form  input[type="password"]:focus {
 	background-color: #FFFF7D;
 }
 
 .app_button {
-	
+	background-color: #4da6ff;
+	border: 1px solid #0033cc;
+	border-radius: 3px 3px 3px 3px;
+	font-size: 18px;
+	margin-top: 12px;
 }
+
+.app_button {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2b7bb8);
+  background-image: -moz-linear-gradient(top, #3498db, #2b7bb8);
+  background-image: -ms-linear-gradient(top, #3498db, #2b7bb8);
+  background-image: -o-linear-gradient(top, #3498db, #2b7bb8);
+  background-image: linear-gradient(to bottom, #3498db, #2b7bb8);
+  -webkit-border-radius: 3;
+  -moz-border-radius: 3;
+  border-radius: 3px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 16px;
+  padding: 5px 10px 5px 10px;
+  text-decoration: none;
+}
+
+.app_button:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+
+#login_frm {
+
+}
+
 
 #footer {
 	position: fixed;
