--- a/app/views/statics/index.html.erb
+++ b/app/views/statics/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Statics#index</h1>
-<p>Find me in app/views/statics/index.html.erb</p>
+<div id="login_frm" >
+	<h1>Welcome!</h1>
+
+	<p>Please login to use the app:</p>
+	<%= form_tag("/login", method: "post", class: "app_form") do %>
+		<%= label_tag "Username:" %> <br>
+		<%= text_field_tag :username %> <br>
+		<%= label_tag "Password:" %> <br>
+		<%= password_field_tag :password %> <br>
+		<%= submit_tag "Login", class: "app_button" %>
+	<% end %>
+	<br>
+	<%= link_to "Forgot password?", "#" %>
+	
+	<p>Don't have an account? <%= link_to "Sign up here.", "signup" %></p>
+</div>
