--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,14 +6,14 @@
 	<%= uf.label "Email:" %> <br>
 	<%= uf.text_field :email %> <br>
 	<%= uf.label "Password:" %> <br>
-	<%= uf.password_field :password_digest %> <br>
+	<%= uf.password_field :password %> <br>
 	<%= label_tag "Repeat password" %> <br>
-	<%= password_field_tag :confpass %> <br>
+	<%= uf.password_field :password_confirmation %> <br>
 	<%= uf.label "Account type:" %>
 	<%= uf.label "Public" %>
-	<%= uf.radio_button :type, 0, checked: true %>
+	<%= uf.radio_button :acctype, 0, checked: true %>
 	<%= uf.label "Private" %>
-	<%= uf.radio_button :type, 1 %> <br>
+	<%= uf.radio_button :acctype, 1 %> <br>
 	<%= uf.label "First name:" %> <br>
 	<%= uf.text_field :firstname %> <br>
 	<%= uf.label "Last name:" %> <br>
