--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,18 @@
 			</ul>
 		</div>
 		
+		<!-- 
+					Display flash messages for successful or failed actions
+					and validation results.
+		-->
+		<% unless flash[:status] == nil %>
+		<ul id="flashes" class=<%= flash[:status] == 0 ? "fl_success" : "fl_err" %> >
+			<% flash[:msgs].each do |m| %>
+				<li><%= m %></li>
+			<% end %>
+		</ul>
+		<% end %>
+		
 		<div id="body_cont">
 			<%= yield %>
 		</div>
