--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
 				<li>
 					<a href="#">Projects</a>
 					<ul class="main_nav_inner">
+						<li><%= link_to "New project", new_project_path %></li>
 						<li><a href="#">Assigned</a></li>
 						<li><a href="#">Requests</a></li>
 						<li><a href="#">Search</a></li>
