--- a/app/views/users/edit_pass.html.erb
+++ b/app/views/users/edit_pass.html.erb
@@ -7,5 +7,5 @@
 	<%= frm.password_field :password %> <br>
 	<%= frm.label "Repeat new password:" %> <br>
 	<%= frm.password_field :password_confirmation %> <br>
-	<%= frm.submit "Change password", class: [ "app_button", "edit_button" ] %>
+	<%= frm.submit "Change password", class: "app_button edit_button" %>
 <% end %>
