--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,53 @@
-<h1><%= @user.username %></h1>
-
-<p><span class="bold">First name:</span> <%= @user.firstname %> <br>
-<span class="bold">Last name:</span> <%= @user.lastname %> <br>
-<span class="bold">Email:</span> <%= @user.email %> <br>
-<span class="bold">Account type:</span> <%= @user.is_public? ? "Public" : "Private" %>
-<% if current_user == @user %>
-	<br> <span class="bold">You can create projects:</span> <%= @user.is_proj_creator? ? "Yes" : "No" %>
-<% end %>
-</p>
 
 
-<%= link_to "Edit profile", edit_user_path(@user), class: "app_button edit_button" %>
-<%= link_to "Delete acount", "#", class: ["app_button", "delete_button", "visibility_button" ] %>
+<div class="side_layout">
+	<div class="left_side">
+		<h1><%= @user.username %></h1>
+		<h2>Profile data:</h2>
+		<p><span class="bold">First name:</span> <%= @user.firstname %> <br>
+		<span class="bold">Last name:</span> <%= @user.lastname %> <br>
+		<span class="bold">Email:</span> <%= @user.email %> <br>
+		<span class="bold">Account type:</span> <%= @user.is_public? ? "Public" : "Private" %>
+		<% if current_user == @user %>
+			<br> <span class="bold">You can create projects:</span> <%= @user.is_proj_creator? ? "Yes" : "No" %>
+		<% end %>
+		</p>
 
-<div class="invisible_component critical_importance" >
-	<p>Warning: This step is not revertable. Are you sure you want to do this? </p>
-	<%= link_to "Yes, delete my account", user_path(@user), method: "delete", class: "app_button delete_button" %>
+		<% if current_user == @user %>
+		<%= link_to "Edit profile", edit_user_path(@user), class: "app_button edit_button" %>
+		<%= link_to "Delete acount", "#", class: ["app_button", "delete_button", "visibility_button" ] %>
+
+		<div class="invisible_component critical_importance" >
+			<p>Warning: This step is not revertable. Are you sure you want to do this? </p>
+			<%= link_to "Yes, delete my account", user_path(@user), method: "delete", class: "app_button delete_button" %>
+		</div>
+	</div>
+
+	<div class="right_side">
+		<% if current_user.is_proj_creator? %>
+			<h2>Projects created:</h2>
+				<% if current_user.is_private? %>
+					<h3>Private (<%= @prv_projects.count %>):</h3>
+					<ul>
+						<% @prv_projects.each do |prj| %>
+							<li>
+								<%= link_to prj.title, project_path(prj) %>
+								<%= link_to "Edit project", edit_project_path(prj), class: "app_button_smaller edit_button" %>
+							</li>
+						<% end %>
+					</ul>
+				<% end %>
+				<h3>Public (<%= @pub_projects.count %>):</h3>
+				<ul>
+					<% @pub_projects.each do |prj| %>
+						<li>
+							<%= link_to prj.title, project_path(prj) %>
+							<%= link_to "Edit project", edit_project_path(prj), class: "app_button_smaller edit_button" %>
+						</li>
+					<% end %>
+				</ul>
+		<% end %>
+	</div>
+
+	<% end %>
 </div>
