--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,20 +30,16 @@
 						<li><%= link_to "New project", new_project_path %></li>
 						<li><a href="#">Assigned</a></li>
 						<li><a href="#">Requests</a></li>
-						<li><a href="#">Search</a></li>
 					</ul>
 				</li>
 				<li>
-					<a href="#">Help</a>
-					<ul class="main_nav_inner">
-						<li><a href="#">Guide</a></li>
-						<li><a href="#">Recommendations</a></li>
-					</ul>
+					<%= link_to "Search", search_path %>
 				</li>
 				<li>
 					<a href="#">About</a>
 					<ul class="main_nav_inner">
 						<li><a href="#">Application</a></li>
+						<li><a href="#">Guide</a></li>
 						<li><a href="#">Contacts</a></li>
 					</ul>
 				</li>
