--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,62 +1,66 @@
 <div class="side_layout">
 
-	<div class="left_side">
-		<h1><%= @project.title %></h1>
+  <div class="left_side">
+    <h1><%= @project.title %></h1>
 
-		<p><span class="bold">Description:</span> <br> <%= @project.description %> <br><br>
-		<span class="bold">Type:</span> <%= @project.is_public? ? "Public" : "Private" %></p>
-		
-		<h2>Tags:</h2>
-		<% if @project.tags.count == 0 %>
-			<p>No tags for this project yet. Edit it to add some.</p>
-		<% else %>
-			<ul class="tag_list">
-				<% @project.tags.each do |tag| %>
-					<li><%= link_to tag.name, show_tag_path(tag) %></li>
-				<% end %>
-			</ul>
-		<% end %>
+    <p>
+      <span class="bold">Description:</span> <br> <%= @project.description %> <br><br>
+      <span class="bold">Type:</span> <%= @project.is_public? ? "Public" : "Private" %>
+    </p>
 
-                <% if @project.is_proj_owner?(current_user) || @project.is_proj_admin?(current_user) %>
-                  <%= link_to "Project requests", proj_requests_path(@project), id: "proj_requests_link", class: "link_def_style" %>
-                <% end %> <br>
+    <h2>Tags:</h2>
+    <% if @project.tags.count == 0 %>
+      <p>No tags for this project yet. Edit it to add some.</p>
+    <% else %>
+      <ul class="tag_list">
+        <% @project.tags.each do |tag| %>
+          <li><%= link_to tag.name, show_tag_path(tag) %></li>
+        <% end %>
+      </ul>
+    <% end %>
 
-		<% if @project.is_proj_owner?(current_user) %>
-			<%= link_to "Edit project", edit_project_path(@project), class: "app_button edit_button" %>
-			<%= link_to "Delete project", "#", class: "app_button delete_button visibility_button" %>
-			<div class="invisible_component critical_importance" >
-				<p>Warning: This will delete all project data including bugs, envolvement lists and comments. Are you sure you want to do this? </p>
-				<%= link_to "Yes, delete this project", project_path(@project), method: "delete", class: "app_button delete_button" %>
-			</div>
-		<% end %>
+    <% if @project.is_proj_owner?(current_user) || @project.is_proj_admin?(current_user) %>
+      <%= link_to "Project requests", proj_requests_path(@project), id: "proj_requests_link", class: "link_def_style" %>
+    <% end %> <br>
 
-                <% unless (not is_logged?) || @project.is_member?(current_user) || @project.is_proj_owner?(current_user) || current_user.made_join_request?(@project) || current_user.invited_to_proj_request?(@project) %>
-                  <%= link_to "Apply to join", join_project_path(@project), method: "post", class: "app_button create_button" %>
-                <% end %>
-	</div>
+    <% if @project.is_proj_owner?(current_user) %>
+      <%= link_to "Edit project", edit_project_path(@project), class: "app_button edit_button" %>
+      <%= link_to "Delete project", "#", class: "app_button delete_button visibility_button" %>
+      <div class="invisible_component critical_importance" >
+        <p>Warning: This will delete all project data including bugs, envolvement lists and comments. Are you sure you want to do this? </p>
+        <%= link_to "Yes, delete this project", project_path(@project), method: "delete", class: "app_button delete_button" %>
+      </div>
+    <% end %>
 
-	<div class="right_side">
-          <h2>Members(<%= @project.members.size %>):</h2>
-          <ul>
-            <% @project.members.each do |mem| %>
-              <li>
-                <%= link_to mem.user.username, user_path(mem.user) %>
-                <% if @project.is_proj_owner?(current_user) || @project.is_proj_admin?(current_user) %>
-                  <%= link_to "#{mem.user == current_user ? 'Leave project' : 'Remove member'}", remove_pr_member_path(mem.project, mem), method: "delete", class: "app_button delete_button" %>
-                <% end %>
-              </li>
+    <% unless (not is_logged?) || @project.is_member?(current_user) || @project.is_proj_owner?(current_user) || current_user.made_join_request?(@project) || current_user.invited_to_proj_request?(@project) %>
+      <%= link_to "Apply to join", join_project_path(@project), method: "post", class: "app_button create_button" %>
+    <% end %>
+  </div>
+
+  <div class="right_side">
+    <h2>Members(<%= @project.members.size %>):</h2>
+      <ul>
+        <% @project.members.each do |mem| %>
+          <li>
+            <%= link_to mem.user.username, user_path(mem.user) %>
+            <% if @project.is_proj_owner?(current_user) || @project.is_proj_admin?(current_user) %>
+              <%= link_to "#{mem.user == current_user ? 'Leave project' : 'Remove member'}", remove_pr_member_path(mem.project, mem), method: "delete", class: "app_button delete_button" %>
             <% end %>
-          </ul>
+          </li>
+        <% end %>
+      </ul>
 
-          <% if @project.is_private? %>
-            <h2>Groups:</h2>
-            <ul>
-              <% @project.groups.each do |gr| %>
-                <li>
-                  <%= link_to gr.name, group_path(@project, gr) %>
-                </li>
-              <% end %>
-            </ul>
-          <% end %>
-	</div>
+    <% if @project.is_private? %>
+      <h2>Groups:</h2>
+      <ul>
+        <% @project.groups.each do |gr| %>
+          <li>
+            <%= link_to gr.name, group_path(@project, gr) %>
+          </li>
+        <% end %>
+      </ul>
+    <% end %>
+  </div>
+
 </div>
+
