--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,52 +18,51 @@
 
 
 body {
-	background-color: #F3F3F3;
-	height: 100%;
-	margin: 0px;
-	padding: 53px 0px 0px 0px;
-	font-family: 'Arial';
+  background-color: #F3F3F3;
+  height: 100%;
+  margin: 0px;
+  padding: 53px 0px 0px 0px;
+  font-family: 'Arial';
 }
 
 ul > li {
-	list-style: none;
+  list-style: none;
 }
 
 #header {
-	position: fixed;
-	top: 0px;
-	width: 100%;
-	margin: 0px;
-	padding: 0px;
-	background-color: #FFFFFF;
-	border-bottom: 2px solid #4D4D4D;
-	padding: 2px 20px 0px 6px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  background-color: #FFFFFF;
+  border-bottom: 2px solid #4D4D4D;
+  padding: 2px 20px 0px 6px;
 }
 
 #main_nav {
-	margin: 0px 40px 0px 0px;
-	float: right;
+  margin: 0px 40px 0px 0px;
+  float: right;
 }
 
 #main_nav > li {
-	display: inline-block;
-	padding: 15px 0px 0px 0px;
-	color: #000000;
-	font-weight: bold;
-	text-transform: uppercase;
-	text-align: center;
+  display: inline-block;
+  padding: 15px 0px 0px 0px;
+  color: #000000;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 #main_nav > li a {
-	padding: 17px 12px 14px 12px;
-	text-decoration: none;
-	color: #000000;
-	font-family: 'Lato';
-	
+  padding: 17px 12px 14px 12px;
+  text-decoration: none;
+  color: #000000;
+  font-family: 'Lato';
 }
 
 #main_nav  > li a:hover {
-	color: #FFA347;
+  color: #FFA347;
 }
 
 #main_nav > li #nav_username {
@@ -71,99 +70,100 @@ ul > li {
 }
 
 .main_nav_inner {
-	position: fixed;
-	visibility: hidden;
-	padding: 0px 0px 0px 0px;
-	border-left: 1px solid #4D4D4D;
-	border-right: 1px solid #4D4D4D;
-	border-bottom: 1px solid #4D4D4D;
-	background-color: #FFFFFF;
-	top: 53px;
+  position: fixed;
+  visibility: hidden;
+  padding: 0px 0px 0px 0px;
+  border-left: 1px solid #4D4D4D;
+  border-right: 1px solid #4D4D4D;
+  border-bottom: 1px solid #4D4D4D;
+  background-color: #FFFFFF;
+  top: 53px;
 }
+
 .main_nav_inner > li {
-	display: block;
-	padding: 4px 4px 4px 4px;
-	text-align: left;
+  display: block;
+  padding: 4px 4px 4px 4px;
+  text-align: left;
 }
 
 .main_nav_inner > li a {
-	padding: 0px 0px 0px 0px;
-	text-transform: none;
-	font-family: 'Arial';
-	color: #000000;
-	font-size: 14px;
-	text-decoration: none;
-	font-weight: normal;
+  padding: 0px 0px 0px 0px;
+  text-transform: none;
+  font-family: 'Arial';
+  color: #000000;
+  font-size: 14px;
+  text-decoration: none;
+  font-weight: normal;
 }
 
 .main_nav_inner > li a:hover {
-	color: #000000;
+  color: #000000;
 }
 
 #flashes {
-	margin: 0px;
-	padding: 5px 0px 5px 0px;
-	text-align: center;
+  margin: 0px;
+  padding: 5px 0px 5px 0px;
+  text-align: center;
 }
 
 #flashes li {
-	list-style: none;
+  list-style: none;
 }
 
 .fl_err {
-	background-color: #ff8080;
-	border-bottom: 1px solid #e60000;
+  background-color: #ff8080;
+  border-bottom: 1px solid #e60000;
 }
 
 .fl_success {
-	background-color: #99ff99;
-	border-bottom: 1px solid #00b300;
+  background-color: #99ff99;
+  border-bottom: 1px solid #00b300;
 }
 
 #body_cont {
-	clear: right;
-	padding: 10px 16px 40px 20px;
+  clear: right;
+  padding: 10px 16px 40px 20px;
 }
 
 
 .app_form  input[type="text"] {
-	height: 22px;
-	width: 200px;
-	font-size: 14px;
-	border-radius: 3px 3px 3px 3px;
+  height: 22px;
+  width: 200px;
+  font-size: 14px;
+  border-radius: 3px 3px 3px 3px;
 }
 
 .app_form  input[type="text"]:focus {
-	background-color: #FFFF7D;
+  background-color: #FFFF7D;
 }
 
 
 .app_form  input[type="password"] {
-	height: 22px;
-	width: 200px;
-	font-size: 14px;
-	border-radius: 3px 3px 3px 3px;
+  height: 22px;
+  width: 200px;
+  font-size: 14px;
+  border-radius: 3px 3px 3px 3px;
 }
 
 .app_form textarea:focus {
-	background-color: #FFFF7D;
+  background-color: #FFFF7D;
 }
 
 .app_form  textarea {
-	height: 80px;
-	width: 350px;
-	font-size: 14px;
-	border-radius: 3px 3px 3px 3px;
+  height: 80px;
+  width: 350px;
+  font-size: 14px;
+  border-radius: 3px 3px 3px 3px;
 }
 
 .app_form  input[type="password"]:focus {
-	background-color: #FFFF7D;
+  background-color: #FFFF7D;
 }
 
 .app_button {
-	border-radius: 3px 3px 3px 3px;
-	font-size: 18px;
-	margin-top: 12px;
+  border-radius: 3px 3px 3px 3px;
+  font-size: 18px;
+  margin-top: 12px;
   -webkit-border-radius: 3;
   -moz-border-radius: 3;
   border-radius: 3px;
@@ -175,9 +175,9 @@ ul > li {
 }
 
 .app_button_smaller {
-	border-radius: 3px 3px 3px 3px;
-	font-size: 18px;
-	margin-top: 12px;
+  border-radius: 3px 3px 3px 3px;
+  font-size: 18px;
+  margin-top: 12px;
   -webkit-border-radius: 3;
   -moz-border-radius: 3;
   border-radius: 3px;
@@ -189,8 +189,8 @@ ul > li {
 }
 
 .create_button {
-	background: #67b0e0;
-	border: solid #0033cc 1px;
+  background: #67b0e0;
+  border: solid #0033cc 1px;
   background-image: -webkit-linear-gradient(top, #67b0e0, #2b7bab);
   background-image: -moz-linear-gradient(top, #67b0e0, #2b7bab);
   background-image: -ms-linear-gradient(top, #67b0e0, #2b7bab);
@@ -209,8 +209,8 @@ ul > li {
 }
 
 .edit_button {
-	border: solid #648564 1px;
-	background: #2bff2b;
+  border: solid #648564 1px;
+  background: #2bff2b;
   background-image: -webkit-linear-gradient(top, #2bff2b, #12a612);
   background-image: -moz-linear-gradient(top, #2bff2b, #12a612);
   background-image: -ms-linear-gradient(top, #2bff2b, #12a612);
@@ -219,7 +219,7 @@ ul > li {
 }
 
 .edit_button:hover {
-	background: #a9fca9;
+  background: #a9fca9;
   background-image: -webkit-linear-gradient(top, #a9fca9, #18b818);
   background-image: -moz-linear-gradient(top, #a9fca9, #18b818);
   background-image: -ms-linear-gradient(top, #a9fca9, #18b818);
@@ -229,8 +229,8 @@ ul > li {
 }
 
 .delete_button {
-	background: #fc5151;
-	border: solid #6b6363 1px;
+  background: #fc5151;
+  border: solid #6b6363 1px;
   background-image: -webkit-linear-gradient(top, #fc5151, #b30000);
   background-image: -moz-linear-gradient(top, #fc5151, #b30000);
   background-image: -ms-linear-gradient(top, #fc5151, #b30000);
@@ -239,7 +239,7 @@ ul > li {
 }
 
 .delete_button:hover {
-	background: #fa7373;
+  background: #fa7373;
   background-image: -webkit-linear-gradient(top, #fa7373, #ed2828);
   background-image: -moz-linear-gradient(top, #fa7373, #ed2828);
   background-image: -ms-linear-gradient(top, #fa7373, #ed2828);
@@ -253,47 +253,47 @@ ul > li {
 }
 
 .critical_importance {
-	border: 1px solid #6b6363;
-	border-radius: 4px 4px 4px 4px;
-	width: 500px;
-	padding: 0px 6px 12px 8px;
-	margin-top: 20px;
-	background-color: #FFFFFF;
+  border: 1px solid #6b6363;
+  border-radius: 4px 4px 4px 4px;
+  width: 500px;
+  padding: 0px 6px 12px 8px;
+  margin-top: 20px;
+  background-color: #FFFFFF;
 }
 
 .bold {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 #footer {
-	position: fixed;
-	bottom: 0px;
-	width: 100%;
-	background-color: #FFFFFF;
-	border-top: 1px solid #4D4D4D;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  background-color: #FFFFFF;
+  border-top: 1px solid #4D4D4D;
 }
 
 #footer p {
-	margin: 5px 0px 6px 0px;
-	text-align: center;
-	font-size: 14px;
+  margin: 5px 0px 6px 0px;
+  text-align: center;
+  font-size: 14px;
 }
 
 .left_side {
-	float: left;
+  float: left;
 }
 
 .right_side {
-	float: right;
+  float: right;
 }
 
 .right_side ul {
-	padding-left: 0px;
+  padding-left: 0px;
 }
 
 .right_side li {
-	list-style: none;
-	padding: 0px 20px 15px 0px;
+  list-style: none;
+  padding: 0px 20px 15px 0px;
 }
 
 .owned_projects_list li {
@@ -301,60 +301,58 @@ ul > li {
 }
 
 #search_pr_form {
-	display: block;
+  display: block;
 }
 
-#search_usr_form
- {
-	display: none;
+#search_usr_form {
+  display: none;
 }
-
 
 .tag_list {
-	padding: 6px 6px 6px 6px;
-	max-width: 350px;
-	border-radius: 6px;
-	background-color: #ffffff;
-	border: 1px solid #4d4d4d;
+  padding: 6px 6px 6px 6px;
+  max-width: 350px;
+  border-radius: 6px;
+  background-color: #ffffff;
+  border: 1px solid #4d4d4d;
 }
 
 .tag_list li {
-	display: inline;
-	padding: 0px 4px 0px 4px;
+  display: inline;
+  padding: 0px 4px 0px 4px;
 }
 
 .tag_list a {
-	text-decoration: none;
-	color: #4d4d4d;
+  text-decoration: none;
+  color: #4d4d4d;
 }
 
 .tag_list a:hover {
-	color: #ffa31a;
+  color: #ffa31a;
 }
 
 .delete_tag_list {
-	padding: 6px 6px 6px 6px;
-	max-width: 350px;
-	border-radius: 6px;
-	background-color: #ffffff;
-	border: 1px solid #4d4d4d;
+  padding: 6px 6px 6px 6px;
+  max-width: 350px;
+  border-radius: 6px;
+  background-color: #ffffff;
+  border: 1px solid #4d4d4d;
 }
 
 .delete_tag_list li {
-	display: inline;
+  display: inline;
 }
 
 .delete_tag_list a {
-	text-decoration: none;
-	color: #4d4d4d;
+  text-decoration: none;
+  color: #4d4d4d;
 }
 
 .tag_list li:hover {
-	color: #ff1a1a;
+  color: #ff1a1a;
 }
 
 .sch_results a {
-	font-size: 18px;
+  font-size: 18px;
 }
 
 .grounded {
