--- a/app/views/projects/all_editable.html.erb
+++ b/app/views/projects/all_editable.html.erb
@@ -4,7 +4,7 @@
   <ul>
     <% @editable.each do |pr| %>
       <li>
-        <% unless (@user.is_public? && pr.is_private?) || @user.invited_to_proj_request?(pr) || @user.made_join_request?(pr) %>
+        <% unless (@user.is_public? && pr.is_private?) || @user.invited_to_proj_request?(pr) || @user.made_join_request?(pr) || pr.is_member?(@user) %>
           <%= link_to pr.title, project_path(pr) %>
           <%= link_to "Invite to join", invite_to_proj_path(pr, @user), method: "post", class: "app_button create_button" %>
         <% end %>
