--- a/app/views/defects/edit.html.erb
+++ b/app/views/defects/edit.html.erb
@@ -2,12 +2,16 @@
 
 <%= form_for([@project, @defect], html: {class: "app_form"}) do |frm| %>
   <%= frm.label "Reassign to:" %>
-  <%= frm.label "User" %>
-  <%= radio_button_tag :asgn_type, "usr", checked: true %>
-  <%= frm.label "Group" %>
-  <%= radio_button_tag :asgn_type, "gr" %> <br>
+  <% if current_user.is_private? %>
+    <%= frm.label "User" %>
+    <%= radio_button_tag :asgn_type, "usr", checked: true %>
+    <%= frm.label "Group" %>
+    <%= radio_button_tag :asgn_type, "gr" %> <br>
+  <% end %>
   <%= frm.select :assigned_to_id, [[@defect.raised_by.username + "(author)", @defect.raised_by.id]] + @project.members.map {|mem| [mem.user.username, mem.user.id]}, include_blank: "" %>
-  <%= frm.select :to_group_id, @project.groups.map {|gr| [gr.name, gr.id]}, include_blank: "" %> <br>
+  <% if current_user.is_private? %>
+    <%= frm.select :to_group_id, @project.groups.map {|gr| [gr.name, gr.id]}, include_blank: "" %>
+  <% end %> <br>
   <%= frm.label "Status:" %> <br>
   <%= frm.select :status, [["Opened", 0], ["Maintenance", 1], ["Closed", 2], ["For deletion", 3]] %> <br>
   <%= frm.label "Importance:" %> <br>
