--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Edit profile</h1>
 <h2><%= @user.username %>:</h2>
 
-<%= form_for(@user, html: { class: "app_form" }) do |frm| %>
+<%= form_for(@user, html: {class: "app_form", onsubmit: "return validate_user();"}) do |frm| %>
   <%= frm.label "Email:" %> <br>
   <%= frm.text_field :email %> <br>
   <%= frm.label "First name:" %> <br>
