--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@defect.project, @defect, @comment], html: {class: "app_form"}) do |frm| %>
+<%= form_for([@defect.project, @defect, @comment], html: {class: "app_form", onsubmit: "return validate_comment();"}) do |frm| %>
   <%= frm.text_area :content %> <br>
   <%= frm.submit "Comment", class: "app_button_smaller create_button" %>
 <% end %>
